<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_subtle_pattern_tiled"
    android:orientation="vertical"
    tools:context="com.tipstat.hackerearth.tipstat.MainActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_grey">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_corner"
            android:focusable="false"
            android:hint="@string/search_hint" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/rounded_corner_grey"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="5dp">

            <TextView
                android:id="@+id/tv_icon_container_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/fa_icon_star"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_open_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="Open Favourites"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/rounded_corner_grey"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/tv_icon_container_ethnicity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fa_icon_ethnicity"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/spinner_ethnicity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="Ethnicity : Asian" />


        </LinearLayout>

    </RelativeLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="2dp" />

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@drawable/page_rounded_corner"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:scrollbarSize="4dp">

        <LinearLayout
            android:id="@+id/btnLay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="invisible"></LinearLayout>
    </HorizontalScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/bg_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@drawable/total_rounded_corner_grey"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_total_items"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_weight="59"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"

            android:layout_weight="0.5"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/tv_api_hits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_weight="39.5"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@drawable/rounded_corner_grey"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_icon_sortby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/fa_icon_sortby"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_sortby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="Sort by"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="6"
            android:background="@drawable/list_item_rounded_corner_grey"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="5"
                android:background="@drawable/rounded_corner_grey"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_icon_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/fa_icon_height"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/tv_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Height"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="5"
                android:background="@drawable/rounded_corner_grey"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_icon_container_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fa_icon_ethnicity"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/tv_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Weight"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
